# deploy-to-aks-skill

./: .gitignore  AGENTS.md  DEMO_IMPROVEMENTS.md  DEMO_SCRIPT.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: deploy-site.yml  test-llm.yml  test.yml
docs/specs/: 2026-04-02-deploy-to-aks-implementation-plan.md  2026-04-02-deploy-to-aks-skill-design.md  2026-04-02-multi-platform-support-design.md  2026-04-02-multi-platform-support-plan.md  2026-04-02-readme-redesign-design.md  2026-04-02-readme-redesign-plan.md  2026-04-03-automated-testing-design.md  2026-04-03-knowledge-pack-expansion-design.md  2026-04-03-knowledge-pack-expansion-plan.md  2026-04-11-quick-mode-simplification-design.md  2026-04-11-quick-mode-simplification-plan.md
docs/superpowers/plans/: 2026-04-10-landing-page-site.md
docs/superpowers/specs/: 2026-04-10-landing-page-site-design.md
scripts/: build-skill.py  setup-aks-prerequisites.sh
site/: comparison.md  index.md  package-lock.json  package.json
site/.vitepress/: config.ts
site/.vitepress/theme/: style.css
site/examples/: fastapi.md  index.md  spring-boot.md
site/guide/: aks-flavors.md  phases.md  quick-mode.md
skills/deploy-to-aks/: SKILL.copilot.md  SKILL.md
tests/: conftest.py
tests/llm/: conftest.py  test_phase1_discover.py  test_phase3_containerize.py  test_phase4_scaffold.py
tests/structural/: conftest.py  test_agents_md.py  test_cross_references.py  test_install_script.py  test_monolith.py  test_phase_structure.py  test_placeholders.py  test_quick_deploy.py  test_readme.py  test_templates.py
(+60 files in other folders)
