[project]
name = "deploy-to-aks-skill"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "pytest-timeout>=2.3",
]
llm = [
    "deploy-to-aks-skill[test]",
    "pytest-rerunfailures>=14.0",
]
dev = [
    "deploy-to-aks-skill[test]",
    "deploy-to-aks-skill[llm]",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "structural: fast, deterministic structural/lint tests",
    "llm: slow, non-deterministic LLM behavioral tests (requires Copilot CLI)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
